--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,17 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-    <%- include("./partials/head.ejs")%>
-<body>
-    <%- include("./partials/nav.ejs") %>
-    <h1>Booklist Index</h1>
+<%- include("./partials/head.ejs")%>
 
-    <% for (let i = 0; i < books.length; ++i) { %>
-        <div>
-            <a href="/books/<%= books[i]._id %>">
-                <%= books[i].title %>
-            </a>
-            <p>click title to see more</p>
-        </div>
-    <% } %>
-</body>
+    <body>
+        <%- include("./partials/nav.ejs") %>
+            <h1>Booklist Index</h1>
+
+            <% for (let i=0; i < books.length; ++i) { %>
+                <div>
+                    <a href="/books/<%= books[i]._id %>">
+                        <%= books[i].title %>
+                    </a>
+                    <p>click title to see more</p>
+                    <!-- delete form goes here -->
+                    <form action="/books/<%= books[i]._id%>/?_method=DELETE" method="post">
+                        <input type="submit" value="Remove Book">
+                    </form>
+
+                    <!-- Link to our edit page-->
+                    <a href="/books/edit/<%= books[i]._id %>/">Edit <%= books[i].title %></a>
+                </div>
+                <% } %>
+    </body>
+
 </html>
