--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<%- include("./partials/head.ejs")%>
+    <%- include("./partials/head.ejs")%>
+<body>
+    <%- include("./partials/nav.ejs") %>
+    <h1>Booklist Index</h1>
+    <p>click title to see more</p>
 
-    <body>
-        <%- include("./partials/nav.ejs") %>
-            <h1>Booklist Index</h1>
-
-            <% for (let i=0; i < books.length; ++i) { %>
-                <div>
-                    <a href="/books/<%= books[i]._id %>">
-                        <%= books[i].title %>
-                    </a>
-                    <p>click title to see more</p>
-                    <!-- delete form goes here -->
-                    <form action="/books/<%= books[i]._id%>/?_method=DELETE" method="post">
+    <div class="book-container">
+        <% for (let i = 0; i < books.length; ++i) { %>
+            <div class="book">
+                <a href="/books/<%= books[i]._id %>" class="book-title">
+                    <%= books[i].title %>
+                </a>
+                <!-- delete form goes here -->
+                <!-- cta - call to action -->
+                <div class="cta">
+                    <form action="/books/<%= books[i]._id%>/?_method=DELETE" method="post" id="deleteform">
                         <input type="submit" value="Remove Book">
                     </form>
-
-                    <!-- Link to our edit page-->
-                    <a href="/books/edit/<%= books[i]._id %>/">Edit <%= books[i].title %></a>
+                    <!-- Link to our edit page -->
+                    <a href="/books/edit/<%= books[i]._id %>/" class="book-edit">Edit <%= books[i].title %></a>
                 </div>
-                <% } %>
-    </body>
-
+            </div>
+        <% } %>
+    </div>
+</body>
 </html>
