--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,6 +1,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/public/styles.css">
+    <!-- <link rel="stylesheet" href="/public/styles.css"> -->
+
+    <span class="pln"><!-- Google Fonts -->
+    </span><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic"><span class="pln">
+    
+    <!-- CSS Reset -->
+    </span><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"><span class="pln">
+    
+    <!-- Milligram CSS -->
+    </span><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.1/milligram.css"><span class="pln">
+    
+    <!-- You should properly set the path from the main file. --></span>
     <title>Booklist</title>
 </head>
